--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/ivan-pl/expense-tracker-front/issues"
   },
-  "homepage": "https://github.com/ivan-pl/expense-tracker-front#readme"
+  "homepage": "https://github.com/ivan-pl/expense-tracker-front#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
+  }
 }
