--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "babel-jest": "^29.1.2",
     "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
+    "prettier": "2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
