--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@types/jest": "^29.1.2",
+    "@types/jest": "^29.2.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "babel-jest": "^29.1.2",
@@ -41,6 +44,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.31.10",
     "gh-pages": "^4.0.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
@@ -50,6 +54,8 @@
     "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.6.1",
     "prettier": "2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "stylelint": "^14.13.0",
@@ -64,8 +70,13 @@
     "webpack-dev-server": "^4.11.1"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
+    "*.{js,ts,tsx}": "eslint --cache --fix",
     "*.scss": "stylelint --fix",
-    "*.{js,html,scss,md}": "prettier --write"
+    "*.{js,ts,tsx,html,scss,md}": "prettier --write"
+  },
+  "dependencies": {
+    "@types/node": "^18.11.3",
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2"
   }
 }
