--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest",
+    "test:cov": "jest --coverage",
     "lint": "prettier --check . && eslint --ext .js,.jsx,.tsx,.ts . && stylelint \"**/*.scss\"",
     "lint:fix": "prettier --write . && eslint --fix --ext .js,.jsx,.tsx,.ts . && stylelint \"**/*scss\" --fix",
     "prepare": "husky install",
@@ -31,6 +32,8 @@
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.5",
     "@types/react": "^18.0.22",
@@ -52,7 +55,7 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "jest": "^29.1.2",
-    "jest-environment-jsdom": "^29.1.2",
+    "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.6.1",
     "prettier": "2.7.1",
