build: setup webpack

--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.31.10",
+    "favicons": "^7.0.2",
+    "favicons-webpack-plugin": "^6.0.0",
     "gh-pages": "^4.0.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
@@ -63,6 +65,7 @@
     "react-dom": "^18.2.0",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
+    "style-loader": "^3.3.1",
     "stylelint": "^14.13.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-prettier-scss": "^0.0.1",
