--- a/package.json
+++ b/package.json
@@ -84,9 +84,11 @@
     "*.{js,ts,tsx,html,scss,md}": "prettier --write"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
     "normalize.css": "^8.0.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2"
   }
 }
