--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "prepare": "husky install",
     "build": "webpack --config webpack.prod.js",
     "build:dev": "webpack --config webpack.dev.js",
-    "dev": "webpack serve --open --config webpack.dev.js",
-    "start": "webpack serve --open --config webpack.dev.js",
+    "dev": "webpack serve --config webpack.dev.js",
+    "start": "webpack serve --config webpack.dev.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -87,7 +87,9 @@
     "@reduxjs/toolkit": "^1.9.1",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
+    "bootstrap": "^5.2.3",
     "normalize.css": "^8.0.1",
+    "react-bootstrap": "^2.7.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2"
   }
