--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
     "bootstrap": "^5.2.3",
+    "currency.js": "^2.0.4",
+    "date-fns": "^2.29.3",
     "normalize.css": "^8.0.1",
     "react-bootstrap": "^2.7.0",
     "react-redux": "^8.0.5",
