--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "date-fns": "^2.29.3",
     "normalize.css": "^8.0.1",
     "react-bootstrap": "^2.7.0",
+    "react-google-charts": "^4.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2"
   }
