--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "bootstrap": "^5.2.3",
     "currency.js": "^2.0.4",
     "date-fns": "^2.29.3",
+    "firebase": "^9.16.0",
     "normalize.css": "^8.0.1",
     "react-bootstrap": "^2.7.0",
     "react-google-charts": "^4.0.0",
