--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "normalize.css": "^8.0.1",
     "react-bootstrap": "^2.7.0",
     "react-google-charts": "^4.0.0",
+    "react-hook-form": "^7.43.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2"
   }
