--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "firebase": "^9.16.0",
     "normalize.css": "^8.0.1",
     "react-bootstrap": "^2.7.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-google-charts": "^4.0.0",
     "react-hook-form": "^7.43.0",
     "react-redux": "^8.0.5",
