--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.5",
+    "@types/node-fetch": "^2.6.2",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
@@ -59,6 +60,7 @@
     "husky": "^8.0.1",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.3.1",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.6.1",
     "prettier": "2.7.1",
