--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "date-fns": "^2.29.3",
     "firebase": "^9.16.0",
     "isomorphic-fetch": "^3.0.0",
+    "jest-coverage-badges": "^1.1.2",
     "normalize.css": "^8.0.1",
     "react-bootstrap": "^2.7.0",
     "react-firebase-hooks": "^5.1.1",
