--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:cov": "jest --coverage",
+    "test:coverage": "jest --coverage",
+    "test:badges": "npm run test:coverage  && jest-coverage-badges --output \"./badges\"",
     "lint": "prettier --check . && eslint --ext .js,.jsx,.tsx,.ts . && stylelint \"**/*.scss\"",
     "lint:fix": "prettier --write . && eslint --fix --ext .js,.jsx,.tsx,.ts . && stylelint \"**/*scss\" --fix",
     "prepare": "husky install",
